--- a/Assets/UI Toolkit/Panels/Main/main.uxml
+++ b/Assets/UI Toolkit/Panels/Main/main.uxml
@@ -1,7 +1,7 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <Style src="project://database/Assets/UI%20Toolkit/Panels/Main/main.uss?fileID=7433441132597879392&amp;guid=4b17115fa332a684eac486ad37eec6b1&amp;type=3#main" />
     <ui:VisualElement name="left" picking-mode="Ignore" style="translate: 0 0; transform-origin: center;">
-        <ui:VisualElement tabindex="1" name="sidebar" picking-mode="Ignore" style="left: auto; transform-origin: left; translate: -100% 0;">
+        <ui:VisualElement tabindex="1" name="sidebar" picking-mode="Ignore" style="left: -100%; transform-origin: center; translate: 0 0;">
             <ui:Button display-tooltip-when-elided="true" name="home" style="top: 6%; height: 7%; background-color: rgb(0, 59, 255); font-size: 83px; margin-top: 33px; margin-bottom: 0; flex-direction: row; justify-content: flex-start; align-items: stretch;">
                 <ui:VisualElement style="width: 22%; -unity-background-scale-mode: stretch-to-fill; justify-content: space-between; align-items: center; background-image: url(&apos;project://database/Assets/UI%20Toolkit/images/Home.png?fileID=2800000&amp;guid=7013d0a85455ada44a42ebd1e0594627&amp;type=3#Home&apos;); padding-right: 0; margin-right: 0;" />
                 <ui:Label text="ホーム" display-tooltip-when-elided="true" style="margin-left: 15%; background-color: rgba(0, 0, 0, 0); color: rgb(255, 255, 255); width: 20%; padding-left: 0; padding-right: 0; padding-top: 0; padding-bottom: 0; margin-right: 0; margin-top: 0; margin-bottom: 0; font-size: 60%;" />
@@ -31,6 +31,8 @@
                 <ui:Label text="戻る" display-tooltip-when-elided="true" style="margin-left: 20%; background-color: rgba(0, 0, 0, 0); color: rgb(255, 255, 255); width: 20%; font-size: 60%;" />
             </ui:Button>
         </ui:VisualElement>
-        <ui:VisualElement name="menu-btn" tabindex="116" style="background-image: url(&apos;project://database/Assets/UI%20Toolkit/images/Menu.png?fileID=2800000&amp;guid=bbc6851c3f87fdb4cac1229620acdfb0&amp;type=3#Menu&apos;); width: 20%; height: 5%; -unity-background-scale-mode: scale-and-crop; position: absolute; flex-direction: row-reverse; top: auto; translate: 0 0; transform-origin: left top;" />
+        <ui:VisualElement name="menu-btn" tabindex="116" picking-mode="Ignore" style="background-image: url(&apos;project://database/Assets/UI%20Toolkit/images/Menu.png?fileID=2800000&amp;guid=bbc6851c3f87fdb4cac1229620acdfb0&amp;type=3#Menu&apos;); width: 20%; height: 5%; -unity-background-scale-mode: scale-and-crop; position: absolute; flex-direction: row-reverse; top: auto; translate: 0 0; transform-origin: left top; display: flex;">
+            <ui:Button text="111&#10;" display-tooltip-when-elided="true" name="btn" enable-rich-text="true" tabindex="70" style="display: flex; visibility: visible; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0); left: auto; right: auto; overflow: visible; font-size: 0; color: rgba(27, 27, 27, 0); border-left-color: rgba(149, 149, 149, 0); border-right-color: rgba(149, 149, 149, 0); border-top-color: rgba(149, 149, 149, 0); border-bottom-color: rgba(149, 149, 149, 0);" />
+        </ui:VisualElement>
     </ui:VisualElement>
 </ui:UXML>
