--- a/Assets/UI Toolkit/Panels/Main/main.uxml
+++ b/Assets/UI Toolkit/Panels/Main/main.uxml
@@ -32,9 +32,7 @@
             </ui:Button>
         </ui:VisualElement>
         <ui:VisualElement name="menu-btn" tabindex="116" picking-mode="Ignore" style="background-image: url(&apos;project://database/Assets/UI%20Toolkit/images/Menu.png?fileID=2800000&amp;guid=bbc6851c3f87fdb4cac1229620acdfb0&amp;type=3#Menu&apos;); width: 20%; height: 5%; -unity-background-scale-mode: scale-and-crop; position: absolute; flex-direction: row-reverse; top: auto; translate: 0 0; transform-origin: left top; display: flex;">
-            <ui:Button text="111&#10;" display-tooltip-when-elided="true" name="btn" enable-rich-text="true" tabindex="70" style="display: flex; visibility: visible; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0); left: auto; right: auto; overflow: visible; font-size: 0; color: rgba(27, 27, 27, 0); border-left-color: rgba(149, 149, 149, 0); border-right-color: rgba(149, 149, 149, 0); border-top-color: rgba(149, 149, 149, 0); border-bottom-color: rgba(149, 149, 149, 0);">
-                <ui:Toggle name="chek" style="background-color: rgba(0, 0, 0, 0); color: rgba(0, 0, 0, 0); -unity-background-image-tint-color: rgba(255, 255, 255, 0); display: none;" />
-            </ui:Button>
+            <ui:Button text="111&#10;" display-tooltip-when-elided="true" name="btn" enable-rich-text="true" tabindex="70" style="display: flex; visibility: visible; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0); left: auto; right: auto; overflow: visible; font-size: 0; color: rgba(27, 27, 27, 0); border-left-color: rgba(149, 149, 149, 0); border-right-color: rgba(149, 149, 149, 0); border-top-color: rgba(149, 149, 149, 0); border-bottom-color: rgba(149, 149, 149, 0);" />
         </ui:VisualElement>
     </ui:VisualElement>
 </ui:UXML>
