--- a/Assets/UI Toolkit/Panels/Main/main.uxml
+++ b/Assets/UI Toolkit/Panels/Main/main.uxml
@@ -1,5 +1,6 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <Style src="project://database/Assets/UI%20Toolkit/Panels/Main/main.uss?fileID=7433441132597879392&amp;guid=4b17115fa332a684eac486ad37eec6b1&amp;type=3#main" />
+    <ui:VisualElement name="gray-background" style="position: absolute; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.4); display: none;" />
     <ui:VisualElement name="left" picking-mode="Ignore" style="translate: 0 0; transform-origin: center;">
         <ui:VisualElement tabindex="1" name="sidebar" picking-mode="Ignore" style="left: -100%; transform-origin: center; translate: 0 0;">
             <ui:Button display-tooltip-when-elided="true" name="home" style="top: 6%; height: 7%; background-color: rgb(0, 59, 255); font-size: 83px; margin-top: 33px; margin-bottom: 0; flex-direction: row; justify-content: flex-start; align-items: stretch;">
