--- a/Assets/UI/Panels/Main/main.uss
+++ b/Assets/UI/Panels/Main/main.uss
@@ -19,6 +19,26 @@
     transition-duration: 0.75s;
     transition-timing-function: ease-out-back;
 }
+
 .pop-animation-hide {
     opacity: 0;
+}
+
+.sidebar-button {
+    top: 6%;
+    height: 7%;
+    background-color: rgb(0, 59, 255);
+    font-size: 83px;
+    margin-top: 33px;
+    margin-bottom: 0;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: stretch;
+}
+
+.sidebar-img {
+    width: 22%;
+    -unity-background-scale-mode: stretch-to-fill;
+    justify-content: space-between;
+    align-items: center;
 }
