--- a/Assets/UI/Panels/Main/shopItem.uxml
+++ b/Assets/UI/Panels/Main/shopItem.uxml
@@ -1,5 +1,5 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
-    <ui:VisualElement name="item-list" style="background-color: rgb(187, 214, 15); width: 40%; height: 100%; flex-direction: column; flex-wrap: wrap-reverse;">
+    <ui:VisualElement name="item-list" style="background-color: rgb(187, 214, 15); width: 500px; height: 20%; flex-direction: column; flex-wrap: wrap-reverse;">
         <ui:Label text="Label" display-tooltip-when-elided="true" name="name" />
         <ui:Label text="Label" display-tooltip-when-elided="true" name="text" />
     </ui:VisualElement>
