--- a/Assets/UI/Panels/Main/main.uxml
+++ b/Assets/UI/Panels/Main/main.uxml
@@ -1,13 +1,13 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <Style src="project://database/Assets/UI/Panels/Main/main.uss?fileID=7433441132597879392&amp;guid=4b17115fa332a684eac486ad37eec6b1&amp;type=3#main" />
-    <ui:VisualElement name="gray-background" style="position: absolute; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.53); display: none;" />
-    <ui:VisualElement name="left" picking-mode="Ignore" style="translate: 0 0; transform-origin: center; width: 50%;">
+    <ui:VisualElement name="gray-background" tabindex="0" style="position: absolute; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.53); display: none;" />
+    <ui:VisualElement name="left" picking-mode="Ignore" tabindex="1" style="translate: 0 0; transform-origin: center; width: 50%;">
         <ui:VisualElement tabindex="1" name="sidebar" picking-mode="Ignore" style="left: -100%; transform-origin: center; translate: 0 0;">
             <ui:Button display-tooltip-when-elided="true" name="home" class="sidebar-button">
                 <ui:VisualElement class="sidebar-img" style="background-image: url(&apos;project://database/Assets/UI/images/Home.png?fileID=2800000&amp;guid=7013d0a85455ada44a42ebd1e0594627&amp;type=3#Home&apos;); width: 22%; height: auto;" />
                 <ui:Label text="ホーム" display-tooltip-when-elided="true" style="margin-left: 15%; background-color: rgba(0, 0, 0, 0); color: rgb(255, 255, 255); width: 20%; padding-left: 0; padding-right: 0; padding-top: 0; padding-bottom: 0; margin-right: 0; margin-top: 0; margin-bottom: 0; font-size: 60%;" />
             </ui:Button>
-            <ui:Button display-tooltip-when-elided="true" name="shop" class="sidebar-button">
+            <ui:Button display-tooltip-when-elided="true" name="shop-button" class="sidebar-button">
                 <ui:VisualElement name="img" class="sidebar-img" style="background-image: url(&apos;project://database/Assets/UI/images/shop.png?fileID=2800000&amp;guid=187288bccf941b2438584f88b0fb57ac&amp;type=3#shop&apos;);" />
                 <ui:Label text="ショップ" display-tooltip-when-elided="true" style="margin-left: 20%; background-color: rgba(0, 0, 0, 0); color: rgb(255, 255, 255); width: 20%; font-size: 60%;" />
             </ui:Button>
@@ -32,8 +32,9 @@
                 <ui:Label text="戻る" display-tooltip-when-elided="true" style="margin-left: 20%; background-color: rgba(0, 0, 0, 0); color: rgb(255, 255, 255); width: 20%; font-size: 60%;" />
             </ui:Button>
         </ui:VisualElement>
-        <ui:VisualElement name="menu-btn" tabindex="116" picking-mode="Ignore" style="background-image: url(&apos;project://database/Assets/UI/images/Menu.png?fileID=2800000&amp;guid=bbc6851c3f87fdb4cac1229620acdfb0&amp;type=3#Menu&apos;); width: 20%; height: 5%; -unity-background-scale-mode: scale-and-crop; position: absolute; flex-direction: row-reverse; top: auto; translate: 0 0; transform-origin: left top; display: flex;">
+        <ui:VisualElement name="menu-btn" tabindex="1" picking-mode="Ignore" style="background-image: url(&apos;project://database/Assets/UI/images/Menu.png?fileID=2800000&amp;guid=bbc6851c3f87fdb4cac1229620acdfb0&amp;type=3#Menu&apos;); width: 20%; height: 5%; -unity-background-scale-mode: scale-and-crop; position: absolute; flex-direction: row-reverse; top: auto; translate: 0 0; transform-origin: left top; display: flex;">
             <ui:Button text="111&#10;" display-tooltip-when-elided="true" name="btn" enable-rich-text="true" tabindex="70" style="display: flex; visibility: visible; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0); left: auto; right: auto; overflow: visible; font-size: 0; color: rgba(27, 27, 27, 0); border-left-color: rgba(149, 149, 149, 0); border-right-color: rgba(149, 149, 149, 0); border-top-color: rgba(149, 149, 149, 0); border-bottom-color: rgba(149, 149, 149, 0);" />
         </ui:VisualElement>
     </ui:VisualElement>
+    <ui:VisualElement name="content" picking-mode="Ignore" tabindex="3" style="position: absolute; width: 100%; height: 100%;" />
 </ui:UXML>
