--- a/Assets/Resources/UI/Panels/Main/main.uxml
+++ b/Assets/Resources/UI/Panels/Main/main.uxml
@@ -2,7 +2,8 @@
     <Style src="project://database/Assets/Resources/UI/Panels/Main/main.uss?fileID=7433441132597879392&amp;guid=4b17115fa332a684eac486ad37eec6b1&amp;type=3#main" />
     <ui:VisualElement name="gray-background" tabindex="0" style="position: absolute; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.53); display: none;" />
     <ui:VisualElement name="left" picking-mode="Ignore" tabindex="1" style="translate: 0 0; transform-origin: center; width: 50%;">
-        <ui:VisualElement tabindex="1" name="sidebar" picking-mode="Ignore" style="left: -100%; transform-origin: center; translate: 0 0; background-color: rgba(255, 18, 0, 255);">
+        <ui:VisualElement tabindex="1" name="sidebar" picking-mode="Ignore" style="left: -100%; transform-origin: center; translate: 0 0; background-color: rgb(255, 18, 0);">
+            <ui:VisualElement name="backGround" style="width: 100%; height: 100%; position: absolute; background-color: rgba(255, 0, 0, 255);" />
             <ui:Button display-tooltip-when-elided="true" name="home" class="sidebar-button">
                 <ui:VisualElement class="sidebar-img" style="background-image: url(&apos;project://database/Assets/Resources/UI/images/Home.png?fileID=2800000&amp;guid=7013d0a85455ada44a42ebd1e0594627&amp;type=3#Home&apos;); width: 22%; height: auto;" />
                 <ui:Label text="ホーム" display-tooltip-when-elided="true" style="margin-left: 15%; background-color: rgba(0, 0, 0, 0); color: rgb(255, 255, 255); width: 20%; padding-left: 0; padding-right: 0; padding-top: 0; padding-bottom: 0; margin-right: 0; margin-top: 0; margin-bottom: 0; font-size: 60%;" />
@@ -15,9 +16,9 @@
                 <ui:VisualElement style="width: 22%; -unity-background-scale-mode: stretch-to-fill; justify-content: space-between; align-items: center; background-image: url(&apos;project://database/Assets/Resources/UI/images/item.png?fileID=2800000&amp;guid=f49e5b02c25def94684cac87c309abc0&amp;type=3#item&apos;);" />
                 <ui:Label text="持ち物" display-tooltip-when-elided="true" style="margin-left: 20%; background-color: rgba(0, 0, 0, 0); color: rgb(255, 255, 255); width: 20%; font-size: 60%;" />
             </ui:Button>
-            <ui:Button display-tooltip-when-elided="true" name="cat-list" class="sidebar-button">
+            <ui:Button display-tooltip-when-elided="true" name="mission" class="sidebar-button">
                 <ui:VisualElement style="width: 22%; -unity-background-scale-mode: stretch-to-fill; justify-content: space-between; align-items: center; background-image: url(&apos;project://database/Assets/Resources/UI/images/catList.png?fileID=2800000&amp;guid=a124b4fdbae98f24ebddc69cd27e0908&amp;type=3#catList&apos;);" />
-                <ui:Label text="猫リスト" display-tooltip-when-elided="true" style="margin-left: 20%; background-color: rgba(0, 0, 0, 0); color: rgb(255, 255, 255); width: 20%; font-size: 60%;" />
+                <ui:Label text="ミッション" display-tooltip-when-elided="true" enable-rich-text="false" style="margin-left: 20%; background-color: rgba(0, 0, 0, 0); color: rgb(255, 255, 255); width: 20%; font-size: 60%;" />
             </ui:Button>
             <ui:Button display-tooltip-when-elided="true" name="setting" class="sidebar-button">
                 <ui:VisualElement style="width: 22%; -unity-background-scale-mode: stretch-to-fill; justify-content: space-between; align-items: center; background-image: url(&apos;project://database/Assets/Resources/UI/images/Setting.png?fileID=2800000&amp;guid=29f7188255fd87347b08308a2239dfd6&amp;type=3#Setting&apos;);" />
