--- a/Assets/Resources/UI/Panels/Main/main.uxml
+++ b/Assets/Resources/UI/Panels/Main/main.uxml
@@ -3,7 +3,7 @@
     <ui:VisualElement name="gray-background" tabindex="0" style="position: absolute; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.53); display: none;" />
     <ui:VisualElement name="left" picking-mode="Ignore" tabindex="1" style="translate: 0 0; transform-origin: center; width: 50%;">
         <ui:VisualElement tabindex="1" name="sidebar" picking-mode="Ignore" style="left: -100%; transform-origin: center; translate: 0 0; background-color: rgb(255, 18, 0);">
-            <ui:VisualElement name="backGround" style="width: 100%; height: 100%; position: absolute; background-color: rgba(255, 0, 0, 255);" />
+            <ui:VisualElement name="backGround" style="width: 100%; height: 100%; position: absolute; background-color: rgb(255, 0, 0);" />
             <ui:Button display-tooltip-when-elided="true" name="home" class="sidebar-button">
                 <ui:VisualElement class="sidebar-img" style="background-image: url(&apos;project://database/Assets/Resources/UI/images/Home.png?fileID=2800000&amp;guid=7013d0a85455ada44a42ebd1e0594627&amp;type=3#Home&apos;); width: 22%; height: auto;" />
                 <ui:Label text="ホーム" display-tooltip-when-elided="true" style="margin-left: 15%; background-color: rgba(0, 0, 0, 0); color: rgb(255, 255, 255); width: 20%; padding-left: 0; padding-right: 0; padding-top: 0; padding-bottom: 0; margin-right: 0; margin-top: 0; margin-bottom: 0; font-size: 60%;" />
@@ -38,4 +38,11 @@
         </ui:VisualElement>
     </ui:VisualElement>
     <ui:VisualElement name="content" picking-mode="Ignore" tabindex="3" style="position: absolute; width: 100%; height: 100%;" />
+    <ui:VisualElement focusable="true" picking-mode="Ignore" name="TopBar" style="position: absolute; left: 30%; top: 2%; width: 70%; height: 4%; flex-direction: row; flex-shrink: 1; display: flex; visibility: visible; overflow: visible;">
+        <ui:Button text="&#10;" display-tooltip-when-elided="true" enable-rich-text="true" name="CameraButton" style="background-color: rgba(255, 255, 255, 0); background-image: resource(&apos;UI/images/camera&apos;); -unity-background-scale-mode: scale-to-fit; margin-left: 0; margin-right: 0; margin-top: 0; margin-bottom: 0; padding-left: 0; padding-right: 0; padding-top: 0; padding-bottom: 0; width: 10%; height: 100%; border-left-width: 0; border-right-width: 0; border-top-width: 0; border-bottom-width: 0;" />
+        <ui:Button display-tooltip-when-elided="true" name="TVButton" style="left: 5%; background-image: resource(&apos;UI/images/icon_109960_32 1&apos;); -unity-background-scale-mode: scale-and-crop; background-color: rgba(188, 188, 188, 0); width: 10%; border-left-width: 0; border-right-width: 0; border-top-width: 0; border-bottom-width: 0;" />
+        <ui:VisualElement picking-mode="Ignore" name="FP" style="left: 10%; width: 50%; background-image: resource(&apos;UI/images/fp&apos;); -unity-background-scale-mode: scale-to-fit;">
+            <ui:Label text="100" display-tooltip-when-elided="true" name="FPNumber" tabindex="0" style="left: 20%; width: 70%; top: 20%; flex-direction: row; -unity-text-align: middle-right; -unity-font: resource(&apos;fonts/azukifont121/azuki&apos;); font-size: 25%; white-space: normal; flex-wrap: nowrap; height: 70%; margin-left: 0; margin-right: 0; margin-top: 0; margin-bottom: 0; padding-left: 0; padding-right: 0; padding-top: 0; padding-bottom: 0;" />
+        </ui:VisualElement>
+    </ui:VisualElement>
 </ui:UXML>
